--- a/src/app/components/admin/ingredient/edit-ingredient/edit-ingredient.component.html
+++ b/src/app/components/admin/ingredient/edit-ingredient/edit-ingredient.component.html
@@ -1,174 +1,181 @@
-<app-admin-header></app-admin-header>
+<div class ="flex w-full">
+  <app-navbar></app-navbar>
+  <div class="pl-64 w-full">
+    <div class="w-full">
+      <app-admin-header></app-admin-header>
 
-<div *ngIf="!loading">
-  <div
-    class="h-20 w-full flex justify-center items-center"
-    style="font-family: 'Open Sans', sans-serif;"
-  >
-    <div><h2 class="text-4xl">EDITA UN INGREDIENTE</h2></div>
-  </div>
-  <div class="w-full flex justify-center items-center h-full">
-    <form
-      [formGroup]="form"
-      class="w-2/4 content-center"
-      encType="multipart/form-data"
-    >
-    <div class="width-full">
-      <div class="md:flex md:items-center mb-6">
-        <div class="md:w-1/5">
-          <label
-            class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4"
-            for="inline-full-name"
-          >
-            Nombre
-          </label>
+      <div *ngIf="!loading">
+        <div
+          class="h-20 w-full flex justify-center items-center"
+          style="font-family: 'Open Sans', sans-serif;"
+        >
+          <div><h2 class="text-4xl">EDITA UN INGREDIENTE</h2></div>
         </div>
-        <div class="md:w-4/5">
-          <input
-            formControlName="name"
-            class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"
-            id="inline-full-name"
-            type="text"
-            placeholder="Ej. Ron"
-          />
-        </div>
-      </div>
-      <app-required-field
-            [text]="'Este campo es requerido.'"
-            *ngIf="form.get('name').invalid && form.get('name').touched"
-        ></app-required-field>
-      </div>
-
-      <div class="width-full">
-      <div class="md:flex md:items-center mb-6">
-        <div class="md:w-1/5">
-          <label
-            class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4"
-            for="inline-full-name"
+        <div class="w-full flex justify-center items-center h-full">
+          <form
+            [formGroup]="form"
+            class="w-2/4 content-center"
+            encType="multipart/form-data"
           >
-            Categoría
-          </label>
-        </div>
-        <div class="md:w-4/5 relative">
-          <select
-            formControlName="category"
-            class="block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 py-3 px-4 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-orange-500"
-            id="grid-state"
-          >
-            <option [value]="item" *ngFor="let item of categories">{{
-              item
-            }}</option>
-          </select>
-          <div
-            class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700"
-          >
-            <svg
-              class="fill-current h-4 w-4"
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 20 20"
-            >
-              <path
-                d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"
-              />
-            </svg>
-          </div>
-        </div>
-      </div>
-      <app-required-field
-            [text]="'Este campo es requerido.'"
-            *ngIf="form.get('category').invalid && form.get('category').touched"
-        ></app-required-field>
-      </div>
-
-      <div class="md:items-center mb-6">
-        <div class="md:w-full">
-          <label
-            style="font-family: 'Open Sans', sans-serif;"
-            class="block text-black-500 font-bold md:text-center mb-1 md:mb-0 pr-4"
-            for="inline-full-name"
-          >
-            Galería
-          </label>
-        </div>
-        <div class="md:w-full">
-          <label
-            style="font-family: 'Open Sans', sans-serif;"
-            class="block text-black-500 font-bold md:text-center mb-1 md:mb-0 pr-4"
-            for="inline-full-name"
-          >
-            Por favor, esperar a que aparezcan las fotos. Esto indicará que
-            fueron cargadas con éxito.
-          </label>
-        </div>
-      </div>
-
-      <div class="md:flex md:items-center mb-6">
-        <div class="md:w-1/5">
-          <label
-            class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4"
-            for="inline-full-name"
-          >
-            Ícono
-          </label>
-        </div>
-        <div class="md:w-4/5">
-          <div
-            *ngIf="!this.main_image"
-            class="flex items-center justify-center bg-grey-lighter"
-          >
-            <label
-              class="w-full flex justify-center h-full items-center px-4 py-3 pr-8 bg-gray-200 rounded-lg shadow-lg tracking-wide border border-blue cursor-pointer hover:bg-orange-500 hover:text-white"
-            >
-              <span class="mt-2 text-base leading-normal"
-                >Selecciona un archivo</span
-              >
-              <lib-file-upload-firestorage
-                storagePath="ingredient"
-                (res)="uploadEnRes($event)"
-                class="hidden"
-              >
-              </lib-file-upload-firestorage>
-            </label>
-          </div>
-
-          <div *ngIf="this.main_image" class="width-full bg-grey-lighter">
-            <div class="width-2/3 flex items-center justify-center">
-              <img [src]="this.main_image" class="h-24" />
+          <div class="width-full">
+            <div class="md:flex md:items-center mb-6">
+              <div class="md:w-1/5">
+                <label
+                  class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4"
+                  for="inline-full-name"
+                >
+                  Nombre
+                </label>
+              </div>
+              <div class="md:w-4/5">
+                <input
+                  formControlName="name"
+                  class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"
+                  id="inline-full-name"
+                  type="text"
+                  placeholder="Ej. Ron"
+                />
+              </div>
             </div>
-            <div class="flex space-x-4 justify-end w-full">
-              <button
-                (click)="changeImage(this.main_image)"
-                class="md:w-1/5 shadow bg-gray-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
-                type="button"
-              >
-                Cambiar
-              </button>
+            <app-required-field
+                  [text]="'Este campo es requerido.'"
+                  *ngIf="form.get('name').invalid && form.get('name').touched"
+              ></app-required-field>
             </div>
-          </div>
-        </div>
-      </div>
 
-      <div class="md:flex md:items-center mb-6">
-        <div class="md:w-1/3"></div>
-        <div class="flex space-x-4 justify-end md:w-2/3">
-          <button
-            [disabled]="form.invalid"
-            (click)="editIngredient()"
-            class="md:w-1/4 shadow bg-green-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
-            type="button"
-          >
-            Guardar
-          </button>
-          <button
-            (click)="goBack()"
-            class="md:w-1/4 shadow bg-orange-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
-            type="button"
-          >
-            Regresar
-          </button>
+            <div class="width-full">
+            <div class="md:flex md:items-center mb-6">
+              <div class="md:w-1/5">
+                <label
+                  class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4"
+                  for="inline-full-name"
+                >
+                  Categoría
+                </label>
+              </div>
+              <div class="md:w-4/5 relative">
+                <select
+                  formControlName="category"
+                  class="block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 py-3 px-4 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-orange-500"
+                  id="grid-state"
+                >
+                  <option [value]="item" *ngFor="let item of categories">{{
+                    item
+                  }}</option>
+                </select>
+                <div
+                  class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700"
+                >
+                  <svg
+                    class="fill-current h-4 w-4"
+                    xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 20 20"
+                  >
+                    <path
+                      d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"
+                    />
+                  </svg>
+                </div>
+              </div>
+            </div>
+            <app-required-field
+                  [text]="'Este campo es requerido.'"
+                  *ngIf="form.get('category').invalid && form.get('category').touched"
+              ></app-required-field>
+            </div>
+
+            <div class="md:items-center mb-6">
+              <div class="md:w-full">
+                <label
+                  style="font-family: 'Open Sans', sans-serif;"
+                  class="block text-black-500 font-bold md:text-center mb-1 md:mb-0 pr-4"
+                  for="inline-full-name"
+                >
+                  Galería
+                </label>
+              </div>
+              <div class="md:w-full">
+                <label
+                  style="font-family: 'Open Sans', sans-serif;"
+                  class="block text-black-500 font-bold md:text-center mb-1 md:mb-0 pr-4"
+                  for="inline-full-name"
+                >
+                  Por favor, esperar a que aparezcan las fotos. Esto indicará que
+                  fueron cargadas con éxito.
+                </label>
+              </div>
+            </div>
+
+            <div class="md:flex md:items-center mb-6">
+              <div class="md:w-1/5">
+                <label
+                  class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4"
+                  for="inline-full-name"
+                >
+                  Ícono
+                </label>
+              </div>
+              <div class="md:w-4/5">
+                <div
+                  *ngIf="!this.main_image"
+                  class="flex items-center justify-center bg-grey-lighter"
+                >
+                  <label
+                    class="w-full flex justify-center h-full items-center px-4 py-3 pr-8 bg-gray-200 rounded-lg shadow-lg tracking-wide border border-blue cursor-pointer hover:bg-orange-500 hover:text-white"
+                  >
+                    <span class="mt-2 text-base leading-normal"
+                      >Selecciona un archivo</span
+                    >
+                    <lib-file-upload-firestorage
+                      storagePath="ingredient"
+                      (res)="uploadEnRes($event)"
+                      class="hidden"
+                    >
+                    </lib-file-upload-firestorage>
+                  </label>
+                </div>
+
+                <div *ngIf="this.main_image" class="width-full bg-grey-lighter">
+                  <div class="width-2/3 flex items-center justify-center">
+                    <img [src]="this.main_image" class="h-24" />
+                  </div>
+                  <div class="flex space-x-4 justify-end w-full">
+                    <button
+                      (click)="changeImage(this.main_image)"
+                      class="md:w-1/5 shadow bg-gray-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+                      type="button"
+                    >
+                      Cambiar
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="md:flex md:items-center mb-6">
+              <div class="md:w-1/3"></div>
+              <div class="flex space-x-4 justify-end md:w-2/3">
+                <button
+                  [disabled]="form.invalid"
+                  (click)="editIngredient()"
+                  class="md:w-1/4 shadow bg-green-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+                  type="button"
+                >
+                  Guardar
+                </button>
+                <button
+                  (click)="goBack()"
+                  class="md:w-1/4 shadow bg-orange-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+                  type="button"
+                >
+                  Regresar
+                </button>
+              </div>
+            </div>
+          </form>
         </div>
       </div>
-    </form>
+    </div>
   </div>
 </div>
 
