--- a/src/app/components/admin/ingredient/list-ingredient/list-ingredient.component.html
+++ b/src/app/components/admin/ingredient/list-ingredient/list-ingredient.component.html
@@ -1,81 +1,88 @@
-<app-admin-header></app-admin-header>
+<div class ="flex w-full">
+  <app-navbar></app-navbar>
+  <div class="pl-64 w-full">
+    <div class="w-full">
+      <app-admin-header></app-admin-header>
+      <div
+        class="h-20 w-full flex justify-center items-center"
+        style="font-family: 'Open Sans', sans-serif;"
+      >
+        <div><h2 class="text-4xl font-bold">LISTA DE INGREDIENTES</h2></div>
+      </div>
 
-<div
-  class="h-20 w-full flex justify-center items-center"
-  style="font-family: 'Open Sans', sans-serif;"
->
-  <div><h2 class="text-4xl font-bold">LISTA DE INGREDIENTES</h2></div>
-</div>
+      <div class="w-full flex justify-center items-center h-full pb-10 pt-4">
+        <button (click)="create()"
+          class="md:w-1/3 shadow bg-green-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+          type="button">
+          Crear
+        </button>
+      </div>
 
-<div class="w-full flex justify-center items-center h-full">
-  <button (click)="create()"
-    class="md:w-1/3 shadow bg-green-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
-    type="button">
-    Crear ingrediente
-  </button>
-</div>
+      <div *ngIf="!loading">
+        <div
+          *ngFor="let ing of ingredients"
+          class="w-full flex justify-center items-center h-full"
+        >
+          <div class="w-2/4 content-center">
+            <div class="md:flex md:items-center mb-6">
+              <div class="md:w-1/5">
+                <label
+                  class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4"
+                  for="inline-full-name"
+                >
+                  {{ ing.name }}
+                </label>
+              </div>
 
-<div *ngIf="!loading">
-  <div
-    *ngFor="let ing of ingredients"
-    class="w-full flex justify-center items-center h-full"
-  >
-    <div class="w-2/4 content-center">
-      <div class="md:flex md:items-center mb-6">
-        <div class="md:w-1/5">
-          <label
-            class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4"
-            for="inline-full-name"
-          >
-            {{ ing.name }}
-          </label>
-        </div>
+              <div class="md:w-2/5">
+                <label
+                  class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4"
+                  for="inline-full-name"
+                >
+                  {{ ing.category }}
+                </label>
+              </div>
 
-        <div class="md:w-2/5">
-          <label
-            class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4"
-            for="inline-full-name"
-          >
-            {{ ing.category }}
-          </label>
-        </div>
-
-        <div class="md:w-3/5">
-          <div class="flex space-x-4 justify-end md:w-full">
-            <button
-              (click)="editIngredient(ing._id)"
-              class="md:w-1/3 shadow bg-orange-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
-              type="button"
-            >
-              Editar
-            </button>
-            <button
-              *ngIf="ing.available"
-              (click)="inhabilitateIngredient(ing._id)"
-              class="md:w-1/3 shadow bg-red-500 hover:bg-red-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
-              type="button"
-            >
-              Eliminar
-            </button>
-            <button
-              (click)="deleteIngredient(ing._id)"
-              class="hidden md:w-1/3 shadow bg-red-500 hover:bg-red-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
-              type="button"
-            >
-              Eliminar
-            </button>
-            <button
-              *ngIf="!ing.available"
-              (click)="habilitateIngredient(ing._id)"
-              class="md:w-1/3 shadow bg-gray-500 hover:bg-gray-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
-              type="button"
-            >
-              Recuperar
-            </button>
+              <div class="md:w-3/5">
+                <div class="flex space-x-4 justify-end md:w-full">
+                  <button
+                    (click)="editIngredient(ing._id)"
+                    class="md:w-1/3 shadow bg-orange-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+                    type="button"
+                  >
+                    Editar
+                  </button>
+                  <button
+                    *ngIf="ing.available"
+                    (click)="inhabilitateIngredient(ing._id)"
+                    class="md:w-1/3 shadow bg-red-500 hover:bg-red-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+                    type="button"
+                  >
+                    Eliminar
+                  </button>
+                  <button
+                    (click)="deleteIngredient(ing._id)"
+                    class="hidden md:w-1/3 shadow bg-red-500 hover:bg-red-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+                    type="button"
+                  >
+                    Eliminar
+                  </button>
+                  <button
+                    *ngIf="!ing.available"
+                    (click)="habilitateIngredient(ing._id)"
+                    class="md:w-1/3 shadow bg-gray-500 hover:bg-gray-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+                    type="button"
+                  >
+                    Recuperar
+                  </button>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
 </div>
+
 <app-footer></app-footer>
